# rust-posix-ipc

./: .gitignore  Cargo.toml
src/: lib.rs
tests/: tests.rs
