[package]

name = "posix_ipc"
version = "0.0.2"
authors = ["Torrie Fischer <torrie@ripple.com>", "David Hou <david.hou314@gmail.com>"]
description = "An API to POSIX IPC primitives"
repository = "http://github.com/chaosagent/rust-posix-ipc"
license = "MIT"
readme = "README.md"

[dependencies]
enum_primitive = "0.1.0"
libc = "0.2.17"
